--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,9 @@
 
 
 body, html { 
-  font-family: Gill Sans; padding: 0; margin: 0; height: 100%;
+  font-family: Gill Sans;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -23,6 +25,7 @@ body {
 }
 h1 {
   font-family: Blackoak STD;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.2);
   font-size: 80px;
   margin-left: 40px;
   text-shadow: 2px 2px 8px rgba(0,0,0,0.2) ;
@@ -30,6 +33,7 @@ h1 {
 h2 {
   font-size: 30px;
   font-weight: 300;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.2);
 }
 p {
   font-size: 20px;
@@ -37,7 +41,8 @@ p {
 }
 a {
   text-decoration: none;
-  color: #aa0000;
+  color: #333;
+  font-weight: 400;
 }
 
 /*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*
@@ -47,10 +52,12 @@ a {
 ~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*/
 
 #socialbox {
-  width: 90%;
+  background: rgba(0,0,0,0.2);
+  width: 70%;
   margin: 0 auto 0 150px;
 }
 #socialul li {
+  text-align: center;
   display: inline-block;
   width: 30%;
 }
@@ -64,9 +71,10 @@ a {
 
 #nav {
   background:#333; /*blur would be cool*/
-  position: absolute;
+  position: fixed;
   top:0px;
   height: 32px;
+  z-index: 99999;
   width: 100%;
   border-bottom: #383838 solid 1px;
   -webkit-transition: .2s ease-in-out;
@@ -110,20 +118,19 @@ h3 a:hover {
   height: 900px; 
   width: 100%; 
   border-top: 1px solid #333; 
-  border-bottom: 1px solid #222; 
   box-shadow: 0 0 50px rgba(0,0,0,0.8);
 }
 .content {
-  width: 400px;
-  margin-left: 150px;
+  width: 40%;
+  margin-left: 100px;
 }
 #head { background: url('../img/quad.jpg') no-repeat fixed 50% 0; }
 #about { background: url('../img/hand.jpg') no-repeat fixed; background-size: 100%; }
-#about .photo { background: url('../img/foe2.png') no-repeat fixed; background-size: 40%; min-height: 900px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: absolute; margin: 0 auto; }
-#social { background: url('../img/puckered.png') no-repeat; color:#ffffff;}
-#staff { background: url('../img/train.jpg') no-repeat fixed; color:#ffcc22; background-size: 100%; }
-#tickets { background: url('../img/puckered.png') no-repeat fixed; color: #eee;}
-#contact { background: url('../img/puckered.png') no-repeat fixed; height: 500px; color:#eee;}
+#about .photo { background: url('../img/foe2.png') no-repeat fixed; background-size: 40%; min-height: 900px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: absolute; margin: 0 auto; z-index: 3000; }
+#social { background: url('../img/site2.jpg') no-repeat; color:#333; height: 420px;}
+#staff { background: url('../img/stairs.jpg') no-repeat fixed; color:#eeeeee; background-size: 100%; }
+#tickets { background: url('../img/self.jpg') no-repeat fixed; color: #eee;}
+#contact { background: url('../img/sepia.jpg') no-repeat fixed; background-size: 100%; height: 500px; color:#eee;}
 
 .tbox{
   background: rgba(200,200,200,0.4);
@@ -136,9 +143,8 @@ h3 a:hover {
 }
 
 .logo { 
-  background: url('../img/logo2.png') no-repeat fixed 50% 40px; 
-  min-height: 900px; 
-  padding: 0; 
+  background: url('../img/logoclean.png') no-repeat fixed 50% 80px; 
+  min-height: 900px;  
   width: 100%; 
   margin: 0 auto; 
 }
