--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ a {
   position: fixed;
   top:0px;
   height: 32px;
-  z-index: 999;
+  z-index: 9999;
   width: 100%;
   border-bottom: #383838 solid 1px;
   -webkit-transition: .2s ease-in-out;
@@ -133,7 +133,7 @@ h3 a:hover {
   margin-left: 100px;
 }
 #head { background: url('../img/quad.jpg') no-repeat fixed 50% 0; }
-#about { background: url('../img/hand2.jpg') no-repeat fixed 80% 0; }
+#about { background: url('../img/handbw.jpg') no-repeat fixed 80% 0; }
 #about .photo { background: url('../img/foe2.png') no-repeat fixed; background-size: 40%; min-height: 900px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: absolute; margin: 0 auto; z-index: 3000; }
 #staff { background: url('../img/stairs.jpg') no-repeat fixed 50% 0; color:#eeeeee; }
 #tickets { background: url('../img/train.jpg') no-repeat fixed; color: #eee;}
