--- a/css/styles.css
+++ b/css/styles.css
@@ -141,9 +141,9 @@ h3 a:hover {
 .absolute {
   position: absolute;
 }
-#head { background: url('../img/quad.jpg') no-repeat fixed 50% 0; }
+#head { background: url('../img/quadweb.jpg') no-repeat fixed 50% 0; }
 #about { background: url('../img/handweb.jpg') no-repeat fixed 80% 0; }
-#about .photo { background: url('../img/foe2.png') no-repeat fixed; background-size: 40%; min-height: 900px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: absolute; }
+#about .photo { background: url('../img/foeweb.png') no-repeat fixed; background-size: 40%; min-height: 900px; padding: 0; margin: 0; width: 100%; max-width: 1920px; position: absolute; }
 #staff { background: url('../img/stairsweb.jpg') no-repeat fixed 50% 0; color:#eeeeee; }
 #tickets { background: url('../img/trainweb.jpg') no-repeat fixed; color: #eee;}
 #contact { background: url('../img/pattern.png') fixed 50% 0; height: 500px; color:#eee; }
