--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,8 @@ body, html {
   font-family: Gill Sans;
   padding: 0;
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  text-shadow: rgba(0,0,0,0.2) 1px 1px 3px;
+  /*-webkit-font-smoothing: antialiased;*/
+  text-shadow: rgba(0,0,0,0.1) 1px 1px 3px;
 }
 
 body {
@@ -40,6 +40,7 @@ h2 {
 }
 p {
   font-size: 20px;
+  line-height: 26px;
   font-weight: 100;
 }
 a {
