--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,17 +5,17 @@
   src: url('b.otf');
 }
 
+
 /*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*
 
   General styling
 
 ~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*/
 
-
 body, html {
   margin: 0;
   padding: 0;
-  text-shadow: rgba(0,0,0,0.1) 1px 1px 3px;
+  text-shadow: rgba(0, 0, 0, 0.1) 1px 1px 3px;
   font-family: Gill Sans;
   overflow-x: hidden;
 }
@@ -25,21 +25,25 @@ body {
   font-weight: 300;
   font-size: 0.9em;
 }
+
 h1 {
   margin-left: 40px;
-  text-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
   font-size: 80px;
   font-family: Blackoak STD;
   line-height: 60px;
 }
+
 h2 {
-  text-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
   font-weight: 300;
   font-size: 30px;
 }
+
 p {
   font-size: 18px;
 }
+
 a {
   color: #555;
   text-decoration: none;
@@ -57,15 +61,13 @@ a {
   position: relative;
   top: -50px;
   padding-right: 20px;
-}
-
-#socialul li {
-  display: inline-block;
-  text-align: center;
-}
-
-#socialul li img {
-  height: 30px;
+  li {
+    display: inline-block;
+    text-align: center;
+    img {
+      height: 30px;
+    }
+  }
 }
 
 /*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*
@@ -74,15 +76,15 @@ a {
 
 ~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*/
 
-
 #nav {
   margin-top: 69px;
   z-index: 9999;
   width: 100%;
   height: 40px;
-  border-bottom: rgba(30,30,30,0.9) solid 1px;
-  background:rgba(50,50,50,0.8);
+  border-bottom: rgba(30, 30, 30, 0.9) solid 1px;
+  background: rgba(50, 50, 50, 0.8);
 }
+
 #badge {
   padding-left: 14px;
   opacity: 0.5;
@@ -91,16 +93,18 @@ a {
   -ms-transition: opacity .2s ease-in-out;
   -o-transition: opacity .2s ease-in-out;
   transition: .2s ease-in-out;
-  -webkit-transform:rotate(-20deg);
-  -ms-transform:rotate(-20deg);
-  transform:rotate(-20deg);
+  -webkit-transform: rotate(-20deg);
+  -ms-transform: rotate(-20deg);
+  transform: rotate(-20deg);
+  &:hover {
+    opacity: 1;
+  }
 }
-#badge:hover {
-  opacity: 1;
-}
+
 h2 a {
   color: #fff;
 }
+
 h3 {
   position: relative;
   top: 8px;
@@ -108,16 +112,16 @@ h3 {
   width: 90%;
   letter-spacing: 1px;
   font-size: 18px;
-}
-h3 a {
-  margin-left: 1%;
-  padding: 0px 0.2% 0 0.2%;
-  color:#eee;
-  text-decoration: none;
-  font-weight: 300;
-}
-h3 a:hover {
-  color: #fff;
+  a {
+    margin-left: 1%;
+    padding: 0px 0.2% 0 0.2%;
+    color: #eee;
+    text-decoration: none;
+    font-weight: 300;
+    &:hover {
+      color: #fff;
+    }
+  }
 }
 
 #cta {
@@ -129,13 +133,13 @@ h3 a:hover {
   text-align: center;
   width: 100%;
 }
+
 #banner {
   font-size: 40px !important;
   margin: 0;
-  padding: 8px 10px 4px 10px;
+  padding: 4px 10px;
   text-shadow: none;
 }
-
 
 /*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*
 
@@ -143,117 +147,153 @@ h3 a:hover {
 
 ~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*/
 
-
-.story { 
-  width: 100%; 
-  height: 900px; 
-  border-top: 1px solid #333; 
-  box-shadow: 0 0 50px rgba(0,0,0,0.8);
+.story {
+  width: 100%;
+  height: 900px;
+  border-top: 1px solid #333;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
 }
+
 .taller {
   height: 1150px;
 }
+
 .tall {
   height: 1500px;
 }
+
 .panetitle {
   width: 100%;
 }
+
 #smcontent {
   padding: 0 26px;
-  background: rgba(255,255,255,0.8);
+  background: rgba(255, 255, 255, 0.8);
   font-size: 40px;
   line-height: 150%;
 }
+
 .content {
   float: left;
   margin-left: 100px;
   width: 40%;
 }
-.wide { 
-  width: 70%; 
+
+.wide {
+  width: 70%;
 }
+
 .upper {
   position: relative;
   top: -40px;
 }
+
 .absolute {
   position: absolute;
 }
+
 .aboutdet {
   padding: 4px;
   max-width: 700px;
   border-left: #333 solid 8px;
   border-radius: 4px;
-  background: rgba(255,255,255,0.5);
+  background: rgba(255, 255, 255, 0.5);
   font-size: 18px;
 }
+
 .thin {
   width: 18%;
 }
+
 .right {
   top: 2px;
   width: 80%;
 }
-#head { background: url('../img/quadweb.jpg') no-repeat fixed 50% 0; }
-#smdesc { height:800px; background: url('../img/office.jpg') no-repeat fixed 50% 0; }
-#about { background: url('../img/forestweb.jpg') no-repeat fixed 80% 0; }
-#staff { background: url('../img/grain.png') fixed; color:#eeeeee; }
-#events { background: url('../img/trainweb.jpg') no-repeat fixed; color: #eeeeee;}
-#contact { height: 500px; background: url('../img/pattern.png') fixed 50% 0; color:#eeeeee; }
 
-.tbox{
+#head {
+  background: url('../img/quadweb.jpg') no-repeat fixed 50% 0;
+}
+
+#smdesc {
+  height: 800px;
+  background: url('../img/office.jpg') no-repeat fixed 50% 0;
+}
+
+#about {
+  background: url('../img/forestweb.jpg') no-repeat fixed 80% 0;
+}
+
+#staff {
+  background: url('../img/grain.png') fixed;
+  color: #eeeeee;
+}
+
+#events {
+  background: url('../img/trainweb.jpg') no-repeat fixed;
+  color: #eeeeee;
+}
+
+#contact {
+  height: 500px;
+  background: url('../img/pattern.png') fixed 50% 0;
+  color: #eeeeee;
+}
+
+.tbox {
   padding: 4px 4px 4px 20px;
   width: 300px;
-  border: rgba(255,255,255,0.6) solid 2px;
+  border: rgba(255, 255, 255, 0.6) solid 2px;
   border-radius: 10px;
-  background: rgba(255,255,255,0.5);
+  background: rgba(255, 255, 255, 0.5);
 }
+
 .detail {
   font-size: 14px;
   opacity: 0.8;
 }
+
 #announce {
   display: block;
   margin: 0 auto;
-  padding: 20px;
+  padding: 4px;
   width: 60%;
   border-radius: 10px;
-  background: rgba(0,0,0,0.4) url('../img/casey.jpg') 300px 0 no-repeat;
+  background: rgba(0, 0, 0, 0.4);
   color: #fff;
-  font-size: 40px;
+  text-align: center;
+  font-size: 50px;
 }
-#band {
-  font-size: 70px;
-  margin: 0;
-}
+
 #address {
   font-size: 24px;
-  text-shadow: rgba(0,0,0,0.3) 1px 1px 3px;
+  text-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;
 }
-.logo { 
-  margin: 0 auto; 
-  min-height: 900px;  
-  width: 100%; 
-  background: url('../img/vintage.png') no-repeat fixed 50% 80px; 
+
+.logo {
+  margin: 0 auto;
+  min-height: 900px;
+  width: 100%;
+  background: url('../img/vintage.png') no-repeat fixed 50% 80px;
 }
+
 #blurb {
   position: absolute;
   top: 0px;
   margin: 490px auto;
   padding: 4px;
   width: 99.4%;
-  background: rgba(255,255,255,0.4);
+  background: rgba(255, 255, 255, 0.4);
   text-align: center;
 }
+
 footer {
   padding: 20px 0;
   height: 80px;
   background: url('../img/floral.png') fixed 50% 80px;
   text-align: center;
   opacity: 0.7;
-}
-footer a, footer p, footer img {
-  margin: 8px 0;
-  font-size: 14px;
+  a, p, img {
+    margin: 8px 0;
+    font-size: 14px;
+  }
 }
