--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-
-@font-face {
-  font-family: hara;
-  src: url('b.otf');
-}
-
 /*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*~'`^`'~*-,._.,-*
 
   General styling
@@ -16,7 +9,7 @@ body, html {
   margin: 0;
   padding: 0;
   text-shadow: rgba(0,0,0,0.1) 1px 1px 3px;
-  font-family: Gill Sans;
+  font-family: 'Source Sans Pro', sans-serif;
   overflow-x: hidden;
 }
 
@@ -182,11 +175,11 @@ h3 a:hover {
 }
 .aboutdet {
   padding: 4px;
-  max-width: 700px;
+  max-width: 900px;
   border-left: #333 solid 8px;
   border-radius: 4px;
   background: rgba(255,255,255,0.5);
-  font-size: 18px;
+  font-size: 14px;
 }
 .thin {
   width: 18%;
