--- a/css/styles.css
+++ b/css/styles.css
@@ -205,8 +205,8 @@ h3 a:hover {
 #announce {
   display: block;
   margin: 0 auto;
-  padding: 20px;
   width: 60%;
+  border: rgba(0,0,0,0.4) solid 20px;
   border-radius: 10px;
   color: #fafafa;
   font-size: 40px;
