--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,8 @@ h3 a:hover {
   margin: 0;
 }
 #address {
+  position:relative;
+  top:-30px;
   font-size: 24px;
   text-shadow: rgba(0,0,0,0.3) 1px 1px 3px;
 }
