--- a/css/styles.css
+++ b/css/styles.css
@@ -77,11 +77,13 @@ a {
 #socialul {
   position: fixed;
   right: 0;
-  top: -10px;
+  top: 60px;
 }
 
 #nav {
-  /*margin-top: 69px;*/
+  /*COMMENT NEXT LINE TO HIDE BANNER*/
+  margin-top: 69px;
+  /**/
   z-index: 9999;
   width: 100%;
   height: 40px;
@@ -124,13 +126,18 @@ h3 a {
 h3 a:hover {
   color: #fff;
 }
+h5 {
+  font-size: 0.6em;
+  position: relative;
+  top: 4px;
+}
 
 #cta {
   display: block;
   position: absolute;
   top: 0;
   height: 69px;
-  background: url('../img/waves.png') #888;
+  background: url('../img/carbon_fibre.png') #888;
   text-align: center;
   width: 100%;
 }
