few minor updates:  - removes unused imgs / promos  - removes turntable link (RIP)  - changes org background

--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,7 @@ h5 {
 #head { background: url('../img/quadweb.jpg') no-repeat fixed 50% 0; }
 #smdesc { height:800px; background: url('../img/office.jpg') no-repeat fixed 50% 0; }
 #about { background: url('../img/forestweb.jpg') no-repeat fixed 80% 0; }
-#staff { height: 1200px; background: url('../img/versace.png') fixed; color:#333; }
+#staff { height: 1200px; background: url('../img/noisy.png') fixed; color:#333; }
 #events { height: 500px; background: url('../img/grain.png') fixed; color: #fafafa;}
 #contact { height: 700px; background: url('../img/pattern.png') fixed 50% 0; color:#fafafa; }
 
