--- a/Website/css/theme.css
+++ b/Website/css/theme.css
@@ -6,7 +6,6 @@ body {
 	color:#fff;
 	background-color:#000;
 	font-weight:300;
-	padding:0px 10px;
 }
 html {
 	width:100%;
@@ -20,7 +19,8 @@ h1,h2,h3,h4,h5,h6 {
 	letter-spacing:1px;
 }
 p {
-	margin:0 0 25px;
+	margin-left:10px;
+	margin-right:10px;
 	font-size:18px;
 	line-height:1.5;
 }
